objects/TW1_Parcela_Inadimplencia__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Conciliado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conciliado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Prevista_Deposito__c</fullName>
        <label>Data Prevista de Depósito</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Vencimento__c</fullName>
        <label>Data do Vencimento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_recebimento__c</fullName>
        <label>Data do recebimento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Deposito__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deposito</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Inadimplencia__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Inadimplência</label>
        <referenceTo>TW1_Inadimplencia__c</referenceTo>
        <relationshipLabel>Parcelas da Inadimplência</relationshipLabel>
        <relationshipName>TW1_Parcela_Inadimplencia_Inadimplencia</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Numero_Geral_Parcela__c</fullName>
        <label>Numero Geral da Parcela</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Numero_Parcela__c</fullName>
        <label>Numero Parcela</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Parcela_Recebida__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parcela Recebida</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Tipo_Parcela__c</fullName>
        <label>Tipo de Parcela</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Unidade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unidade</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Parcelas da Inadimplência</relationshipLabel>
        <relationshipName>TW1_Parcela_Inadimplencia_Unidade</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Reajustado__c</fullName>
        <label>Valor Reajustado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Valor__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Parcela da Inadimplência</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <displayFormat>PI# {00000000}</displayFormat>
        <label>Nome de Parcela da Inadimplência</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parcelas da Inadimplência</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>